--- a/dry/main.css
+++ b/dry/main.css
@@ -19,6 +19,19 @@ button {
   height: 100px;
 }
 
+.red {
+  background-color: red;
+}
+.blue {
+  background-color: blue;
+}
+.yellow {
+  background-color: yellow;
+}
+.green {
+  background-color: green;
+}
+
 .box {
   background-color: red;
 }
