--- a/splash-page/main.css
+++ b/splash-page/main.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: "Oxygen", sans-serif;
+  font-family: 'Oxygen', sans-serif;
 }
 
 section {
@@ -17,10 +17,24 @@ section {
   align-content: center;
 }
 
-p {
+article {
   align-self: center;
-  font-size: 8rem;
   color: white;
+  text-align: center;
+}
+
+h1 {
+  font-size: 8rem;
+  margin: 0;
+}
+
+h2 {
+  font-size: 6rem;
+  margin: 0;
+}
+
+p {
+  font-size: 4rem;
 }
 
 .counter {
