--- a/splash-page-carlotta/main.css
+++ b/splash-page-carlotta/main.css
@@ -15,11 +15,12 @@ section {
     flex-direction: row;
     align-content: center;
     justify-content: center;
+    color: white;
 }
 
 article {
     align-self: center;
-    text-align: center;
+    text-align: center;  
 }
 
 h1 {
@@ -46,3 +47,8 @@ h1 {
           opacity: 0;
       }
   }
+
+ .canvas {
+     background-size: cover;
+     background-repeat: no-repeat;
+ }
