--- a/splash-page-carlotta/main.css
+++ b/splash-page-carlotta/main.css
@@ -25,30 +25,33 @@ article {
 
 h1 {
     font-size: 8rem;
-  }
+    text-align: center;
+}
   
-  h2 {
+h2 {
     font-size: 6rem;
-  }
+    text-align: center;
 
-  p {
+}
+
+p {
     font-size: 4rem;
-  }
+}
 
-  .pulse { 
-      animation: flash 1s linear infinite;
-  }
+.pulse { 
+    animation: flash 1s linear infinite;
+}
 
-  @keyframes flash {
-      from{
-          opacity: 1;
-      }
-      to {
-          opacity: 0;
-      }
-  }
+@keyframes flash {
+    from{
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
 
- .canvas {
-     background-size: cover;
-     background-repeat: no-repeat;
- }
+.canvas {
+    background-size: cover;
+    background-repeat: no-repeat;
+}
