--- a/tic-tac-toe/styles/style.css
+++ b/tic-tac-toe/styles/style.css
@@ -85,3 +85,21 @@ h2 {
   text-align: center;
   font-size: 5rem;
 }
+
+button {
+  margin-top: 7%;
+  border-radius: 2px;
+  font-family: 'Wendy One', sans-serif;
+  font-size: 20px;
+  padding: 16px;
+  background-color: goldenrod;
+  border: none;
+  color: grey;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: white;
+}
