--- a/tic-tac-toe/styles/style.css
+++ b/tic-tac-toe/styles/style.css
@@ -87,8 +87,8 @@ h2 {
 }
 
 button {
-  margin-top: 7%;
-  border-radius: 2px;
+  margin-top: 5%;
+  border-radius: 4px;
   font-family: 'Wendy One', sans-serif;
   font-size: 20px;
   padding: 16px;
@@ -98,11 +98,12 @@ button {
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
   cursor: pointer;
-  margin-bottom: 0;
+  margin-bottom: 1%;
 }
 
 button:hover {
-  background-color: white;
+  background-color: gold;
+  border: goldenrod 2px solid;
 }
 
 .winner-board {
